--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
 
         div {
  
-            width: 60%;
-            height: 1000px;
-            min-width: 600px;
+            width: 100%;
+            height: 100%;
+            justify-content: center;
 
-            position: absolute;
-            left: 20%;
+            position: absolute; 
 
             display: flex;
             border-radius: 10px;
@@ -35,14 +34,14 @@
         }
 
         div ul li {
-            height: 50px;
+            height: 80px;
             width: 100%;
             list-style-type: none;
             text-decoration: none;
         }
 
         a {
-            font-size: 32px;
+            font-size:  64px;
             color:blue; 
             text-decoration: none;
         }
