--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <li><a href="./brick/">消除</a></li>
             <li><a href="./color/">鉴别颜色</a></li>
             <li><a href="./rorate/">旋转色块</a></li>
+            <li><a href="./2048/">2048</a></li>
         </ul>
     </div>
 
