add npuzzel game

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <li><a href="./color/">鉴别颜色</a></li>
             <li><a href="./rorate/">旋转色块</a></li>
             <li><a href="./2048/">2048</a></li>
+            <li><a href="./npuzzel/">数字华容道</a></li>
         </ul>
     </div>
 
