--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             <li><a href="./rorate/">旋转色块</a></li>
             <li><a href="./2048/">2048</a></li>
             <li><a href="./npuzzel/">数字华容道</a></li>
+            <li><a href="./flip/">颜色翻转</a></li>
         </ul>
     </div>
 
