--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         html,
         body {
-            background: #888888;
+            background: #2b2a2a;
             padding: 0;
             border: 0;
             margin: 0;
@@ -18,14 +18,9 @@
 
             width: 100%;
             height: 100%;
-            justify-content: center;
-
-            position: absolute;
-
-            display: flex;
+ 
             border-radius: 10px;
-            border: #888888 1px;
-            padding-top: 3%;
+            border: #888888 1px; 
 
 
             display: grid;
@@ -33,8 +28,8 @@
         } 
 
         a {
-            font-size: 50px;
-            color: rgb(126, 31, 129);
+            font-size: 42px;
+            color: rgb(189, 104, 192);
             text-decoration: none;
         }
 
@@ -46,13 +41,14 @@
         div.link:hover {
             color: green;
             opacity: 0.8;
-            background: green;
+            background: rgb(57, 124, 57);
         }
 
-        div.link { 
+        div.link {  
             padding-left: 10%;
-            padding-top: 1%;
-            color: lightslategrey;
+             align-content: center;
+            padding-top: 3%;
+            color: rgb(37, 37, 37);
             border: 1px solid gray
         }
     </style>
