--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Play Games!!</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
         html,
         body {
@@ -57,13 +58,15 @@
 <body>
     <div class="block">
         <!-- <ul> -->
-        <div class="link"><a href="./ball">弹球</a></div>
-        <div class="link"><a href="./brick/">消除</a></div>
-        <div class="link"><a href="./color/">鉴别颜色</a></div>
-        <div class="link"><a href="./rorate/">旋转色块</a></div>
-        <div class="link"><a href="./2048/">2048</a></div>
-        <div class="link"><a href="./npuzzel/">数字华容道</a></div>
-        <div class="link"><a href="./flip/">颜色翻转</a></div>
+        <div class="list-group"> 
+        <div class="link"><a class="list-group-item list-group-item-action list-group-item-primary" href="./ball">弹球</a></div>
+        <div class="link"><a class="list-group-item list-group-item-action list-group-item-primary" href="./brick/">消除</a></div>
+        <div class="link"><a class="list-group-item list-group-item-action list-group-item-primary" href="./color/">鉴别颜色</a></div>
+        <div class="link"><a class="list-group-item list-group-item-action list-group-item-primary" href="./rorate/">旋转色块</a></div>
+        <div class="link"><a class="list-group-item list-group-item-action list-group-item-primary" href="./2048/">2048</a></div>
+        <div class="link"><a class="list-group-item list-group-item-action list-group-item-primary" href="./npuzzel/">数字华容道</a></div>
+        <div class="link"><a class="list-group-item list-group-item-action list-group-item-primary" href="./flip/">颜色翻转</a></div>
+        </div>
         <!-- </ul> -->
     </div>
 
